# docs/swagger.json
@@ -4,6 +4,47 @@
         "contact": {}
     },
     "paths": {
+        "/adoption/{tutorId}/{petId}": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "adoptions"
+                ],
+                "summary": "Create an adoption",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Tutor id",
+                        "name": "tutorId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Pet id",
+                        "name": "petId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.AdoptionResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    }
+                }
+            }
+        },
         "/pets": {
             "get": {
                 "produces": [
@@ -255,7 +296,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schemas.UsersResponse"
+                            "$ref": "#/definitions/schemas.SheltersResponse"
                         }
                     }
                 }
@@ -278,7 +319,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.UserCreateRequest"
+                            "$ref": "#/definitions/schemas.ShelterCreationRequest"
                         }
                     }
                 ],
@@ -286,7 +327,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/schemas.UserResponse"
+                            "$ref": "#/definitions/schemas.ShelterResponse"
                         }
                     },
                     "400": {
@@ -323,7 +364,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schemas.UserResponse"
+                            "$ref": "#/definitions/schemas.ShelterResponse"
                         }
                     },
                     "400": {
@@ -359,7 +400,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.UserUpdateRequest"
+                            "$ref": "#/definitions/schemas.TutorUpdateRequest"
                         }
                     }
                 ],
@@ -367,7 +408,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schemas.UserResponse"
+                            "$ref": "#/definitions/schemas.TutorResponse"
                         }
                     },
                     "400": {
@@ -434,7 +475,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schemas.UsersResponse"
+                            "$ref": "#/definitions/schemas.TutorsResponse"
                         }
                     }
                 }
@@ -457,7 +498,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.UserCreateRequest"
+                            "$ref": "#/definitions/schemas.TutorCreationRequest"
                         }
                     }
                 ],
@@ -465,7 +506,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/schemas.UserResponse"
+                            "$ref": "#/definitions/schemas.TutorResponse"
                         }
                     },
                     "400": {
@@ -499,7 +540,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schemas.UserResponse"
+                            "$ref": "#/definitions/schemas.TutorResponse"
                         }
                     },
                     "400": {
@@ -535,7 +576,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.UserUpdateRequest"
+                            "$ref": "#/definitions/schemas.TutorUpdateRequest"
                         }
                     }
                 ],
@@ -543,7 +584,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schemas.UserResponse"
+                            "$ref": "#/definitions/schemas.TutorResponse"
                         }
                     },
                     "400": {
@@ -586,6 +627,23 @@
         }
     },
     "definitions": {
+        "schemas.AdoptionResponse": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "petId": {
+                    "type": "integer"
+                },
+                "tutorId": {
+                    "type": "integer"
+                }
+            }
+        },
         "schemas.PetCreateRequests": {
             "type": "object",
             "required": [
@@ -707,18 +765,7 @@
                 }
             }
         },
-        "schemas.UpdateIsAdoptPetRequests": {
-            "type": "object",
-            "required": [
-                "isAdopted"
-            ],
-            "properties": {
-                "isAdopted": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "schemas.UserCreateRequest": {
+        "schemas.ShelterCreationRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -750,7 +797,7 @@
                 }
             }
         },
-        "schemas.UserResponse": {
+        "schemas.ShelterResponse": {
             "type": "object",
             "properties": {
                 "about": {
@@ -776,7 +823,85 @@
                 }
             }
         },
-        "schemas.UserUpdateRequest": {
+        "schemas.SheltersResponse": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "shelters": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.ShelterResponse"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "schemas.TutorCreationRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "name",
+                "password"
+            ],
+            "properties": {
+                "about": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 6
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "photo": {
+                    "type": "string"
+                }
+            }
+        },
+        "schemas.TutorResponse": {
+            "type": "object",
+            "properties": {
+                "about": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "photo": {
+                    "type": "string"
+                }
+            }
+        },
+        "schemas.TutorUpdateRequest": {
             "type": "object",
             "required": [
                 "about",
@@ -807,7 +932,7 @@
                 }
             }
         },
-        "schemas.UsersResponse": {
+        "schemas.TutorsResponse": {
             "type": "object",
             "properties": {
                 "limit": {
@@ -819,11 +944,22 @@
                 "total": {
                     "type": "integer"
                 },
-                "users": {
+                "tutors": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/schemas.UserResponse"
+                        "$ref": "#/definitions/schemas.TutorResponse"
                     }
+                }
+            }
+        },
+        "schemas.UpdateIsAdoptPetRequests": {
+            "type": "object",
+            "required": [
+                "isAdopted"
+            ],
+            "properties": {
+                "isAdopted": {
+                    "type": "boolean"
                 }
             }
         }
